--- a/DoAnLTM/src/client/index.css
+++ b/DoAnLTM/src/client/index.css
@@ -2,6 +2,7 @@ html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
+    
 }
 
 #container {
@@ -11,9 +12,11 @@ html,body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: #fff;
+    background: #f2f1da;
     padding: 0px 10px;
     box-sizing: border-box;
+    position: relative;
+
 }
 
 .justifyTop {
@@ -28,16 +31,17 @@ html,body {
     width: 140px;
     height: 140px;
     margin-right: 10px;
-    background: #404545;
-    border: 3px solid #123;
+    background: #7d1399;
+    border: 3px solid #ef5c44ff;
 }
 
 #gameContainer {
     width: 300px;
     height: 600px;
     margin-right: 10px;
-    background: #404545;
-    border: 3px solid #123;
+    background: #7d1399;
+    border: 3px solid #387995ff;
+    opacity: 100%;
 }
 
 .gameItem {
@@ -49,7 +53,7 @@ html,body {
 }
 
 .overlay {
-    background: #000000A0;
+    background: #292e3dff;
 }
 
 .invisible {
@@ -65,7 +69,7 @@ html,body {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     font-size: 40px;
-    color: #00FF99;
+    color: #ef5c44ff;
 }
 
 #nameInput {
@@ -73,15 +77,15 @@ html,body {
     height: 30px;
     margin: 155px 75px 0px 75px;
     padding: 0px;
-    border: 1px solid white;
+    border: 1px solid #f2b84cff;
     text-align: center;
     font-size: 20px;
-    background: #ccc;
+    background: #f2b84cff;
     color: #123;
 }
 
 #nameInput::placeholder {
-    color: #567;
+    color: #292e3dff;
 }
 
 #nameSubmit {
@@ -93,13 +97,13 @@ html,body {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     font-size: 20px;
-    background: #0099FF;
+    background: #41a9adff;
     color: #123;
     cursor: pointer;
 }
 
 #nameSubmit:hover {
-    background: #0BF;
+    background: #387995ff;
 }
 
 .infoText {
@@ -123,13 +127,13 @@ html,body {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     font-size: 20px;
-    background: #09F;
+    background: #41a9adff;
     color: #123;
     cursor: pointer;
 }
 
 .startButton:hover {
-    background: #0BF;
+    background: #387995ff;
 }
 
 .wideButton {
@@ -141,14 +145,14 @@ html,body {
     width: 140px;
     height: 600px;
     margin-right: 10px;
-    background: #414848;
-    border: 3px solid #123;
+    background: #292e3dff;
+    border: 3px solid #f2b84cff;
 }
 
 #opponentCanvas {
     max-width: 600px;
     height: 600px;
-    background: #DDD;
-    border: 3px solid #123;
+    background: #292e3dff;
+    border: 3px solid #33bf4bff;
     transition: all 0.25s;
 }
