--- a/DoAnLTM/src/client/index.css
+++ b/DoAnLTM/src/client/index.css
@@ -12,7 +12,7 @@ html,body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: #f2f1da;
+    background: #292e3dff;
     padding: 0px 10px;
     box-sizing: border-box;
     position: absolute;
@@ -157,5 +157,75 @@ html,body {
     transition: all 0.25s;
 }
 
+.name {
+    text-align: center;
+    font-size: larger;
+    font-family: 'Press Start 2P', cursive;
+    color: #7d1399;
+    width: 100%;
+    height: auto;
+    
+}
 
+.item1 {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border: 4px solid #DE7614;
+    right: 10%;
+    bottom: 40%;
+    animation: spin 10s linear infinite;
+}
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.item2 {
+  position: absolute;
+  left: 90px;
+  bottom: 30%;
+  width: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  animation: topBounce 3s ease-in-out infinite;
+}
+@keyframes topBounce{
+  0%,100%{
+    transform: translateY(0);
+  }
+  50%{
+    transform: translateY(25px);
+  }
+}
+.item2 div{
+  height: 3px;
+  width: 3px;
+  background-color: #ff9c07;
+  margin: 0 3px 8px;
+}
+
+.item3 {
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    border: 12px solid #A6A670;
+    border-radius: 50%;
+    left: 10%;
+    top: 90px;
+    animation: leftBounce 3s ease-in-out infinite;
+}
+@keyframes leftBounce{
+  0%,100%{
+    transform: translateX(0);
+  }
+  50%{
+    transform: translateX(25px);
+  }
+}
 
