--- a/DoAnLTM/src/client/index.css
+++ b/DoAnLTM/src/client/index.css
@@ -2,7 +2,7 @@ html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
-    background: #FCF8E8;
+    background: #292e3dff;
 }
 
 #container {
@@ -12,11 +12,10 @@ html,body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    background: #292e3dff;
+    background-image: none;
     padding: 0px 10px;
     box-sizing: border-box;
     position: absolute;
-
 }
 
 .justifyTop {
@@ -25,6 +24,7 @@ html,body {
 
 .noshrink {
     flex-shrink: 0;
+    scale: 0.8;
 }
 
 #reservedCanvas {
@@ -43,6 +43,7 @@ html,body {
     border: 6px solid #387995ff;
     opacity: 100%;
     margin: 1px;
+    scale: 0.8;
 }
 
 .gameItem {
@@ -166,7 +167,7 @@ html,body {
     width: 100%;
     height: auto;
     position: absolute;
-    top: 20px;
+    top: 10px;
     animation: blink 4s linear infinite;
 }
 @keyframes blink {
@@ -282,36 +283,6 @@ html,body {
     width: 1px;
     background-color: red;
 }
-
-/* .label {
-    background-color: red;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 50px;
-    height: 32px;
-    width: 60px;
-    position: relative;
-    left: 50%;
-}
-
-.ball {
-    background-color: #fff;
-    position: absolute;
-    height: 28px;
-    width: 28px;
-    border-radius: 50%;
-    transition: transform 0.2 linear;
-}
-
-.checkbox {
-    opacity: 100;
-    position: absolute;
-}
-
-.checkbox:checked + .label .ball {
-    transform: translateX(30px);
-} */
 
 
 
