--- a/DoAnLTM/src/client/index.css
+++ b/DoAnLTM/src/client/index.css
@@ -5,6 +5,10 @@ html,body {
     
 }
 
+body.dark {
+    background-color: #fff;
+}
+
 #container {
     width: 100%;
     height: 100%;
@@ -32,7 +36,7 @@ html,body {
     height: 140px;
     margin-right: 10px;
     background: #7d1399;
-    border: 3px solid #ef5c44ff;
+    border: 6px solid #ef5c44ff;
 }
 
 #gameContainer {
@@ -40,8 +44,9 @@ html,body {
     height: 600px;
     margin-right: 10px;
     background: #7d1399;
-    border: 3px solid #387995ff;
+    border: 6px solid #387995ff;
     opacity: 100%;
+    margin: 1px;
 }
 
 .gameItem {
@@ -77,7 +82,7 @@ html,body {
     height: 30px;
     margin: 155px 75px 0px 75px;
     padding: 0px;
-    border: 1px solid #f2b84cff;
+    border: 3px solid #f2b84cff;
     text-align: center;
     font-size: 20px;
     background: #f2b84cff;
@@ -146,14 +151,14 @@ html,body {
     height: 600px;
     margin-right: 10px;
     background: #292e3dff;
-    border: 3px solid #f2b84cff;
+    border: 6px solid #f2b84cff;
 }
 
 #opponentCanvas {
     max-width: 600px;
     height: 600px;
     background: #123;
-    border: 3px solid #33bf4bff;
+    border: 6px solid #33bf4bff;
     transition: all 0.25s;
 }
 
@@ -161,17 +166,36 @@ html,body {
     text-align: center;
     font-size: larger;
     font-family: 'Press Start 2P', cursive;
-    color: #7d1399;
+    color: #ffc31a;
     width: 100%;
     height: auto;
-    
+    position: absolute;
+    top: 20px;
+    animation: blink 4s linear infinite;
+}
+@keyframes blink {
+    0% {
+        color: #ef5c44ff;
+    }
+    25% {
+        color: #f2b84cff;
+    }
+    50% {
+        color: #33bf33;
+    }
+    75% {
+        color: #41a9adff;
+    }
+    100% {
+        color: #A91079;
+    }
 }
 
 .item1 {
     position: absolute;
     width: 40px;
     height: 40px;
-    border: 4px solid #DE7614;
+    border: 8px solid #ef5c44ff;
     right: 10%;
     bottom: 40%;
     animation: spin 10s linear infinite;
@@ -188,7 +212,7 @@ html,body {
 .item2 {
   position: absolute;
   left: 90px;
-  bottom: 30%;
+  bottom: 20%;
   width: 40px;
   display: flex;
   flex-wrap: wrap;
@@ -204,17 +228,17 @@ html,body {
   }
 }
 .item2 div{
-  height: 3px;
-  width: 3px;
-  background-color: #ff9c07;
+  height: 8px;
+  width: 8px;
+  background-color: #f2b84cff;
   margin: 0 3px 8px;
 }
 
 .item3 {
     position: absolute;
-    height: 80px;
-    width: 80px;
-    border: 12px solid #A6A670;
+    height: 60px;
+    width: 60px;
+    border: 8px solid #33bf4bff;
     border-radius: 50%;
     left: 10%;
     top: 90px;
@@ -228,4 +252,74 @@ html,body {
     transform: translateX(25px);
   }
 }
+
+.item4 {
+    position: absolute;
+    border-top: 40px solid transparent;
+    border-left:40px solid #41a9adff;
+    left: 15%;
+    top: 40%;
+    animation: spin 15s linear infinite;
+}
+.item4:before {
+    content: '';
+    border-top: 40px solid transparent;
+    border-left:40px solid #41a9adff;
+    position: absolute;
+    opacity: 0.7;
+    left: -35px;
+    top: -30px;
+}
+
+.item5 {
+    height: 50px;
+    width: 50px;
+    left: 20%;
+    bottom: 30%;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 50%;
+    overflow: hidden;
+    animation: spin 5s linear infinite; 
+}
+.item div {
+    width: 1px;
+    background-color: red;
+}
+
+.label {
+    background-color: red;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 50px;
+    height: 32px;
+    width: 60px;
+    position: relative;
+    left: 50%;
+}
+
+.ball {
+    background-color: #fff;
+    position: absolute;
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+    transition: transform 0.2 linear;
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+
+.checkbox:checked + .label .ball {
+    transform: translateX(30px);
+}
+
+
+
+
+
+
 
