--- a/DoAnLTM/src/client/index.css
+++ b/DoAnLTM/src/client/index.css
@@ -2,11 +2,7 @@ html,body {
     width: 100%;
     height: 100%;
     margin: 0px;
-    
-}
-
-body.dark {
-    background-color: #fff;
+    background: #FCF8E8;
 }
 
 #container {
@@ -287,7 +283,7 @@ body.dark {
     background-color: red;
 }
 
-.label {
+/* .label {
     background-color: red;
     display: flex;
     align-items: center;
@@ -309,13 +305,13 @@ body.dark {
 }
 
 .checkbox {
-    opacity: 0;
+    opacity: 100;
     position: absolute;
 }
 
 .checkbox:checked + .label .ball {
     transform: translateX(30px);
-}
+} */
 
 
 
