--- a/DoAnLTM/src/client/index.css
+++ b/DoAnLTM/src/client/index.css
@@ -33,7 +33,7 @@ html,body {
     height: 140px;
     margin-right: 10px;
     background: #7d1399;
-    border: 8px solid #f2b84cff;
+    border: 8px solid #F7B236;
 }
 
 #gameContainer {
@@ -73,7 +73,7 @@ html,body {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     font-size: 40px;
-    color: #ef5c44ff;
+    color: #F17808;
 }
 
 #nameInput {
@@ -84,7 +84,7 @@ html,body {
     border: 3px solid rgb(150, 98, 2);
     text-align: center;
     font-size: 20px;
-    background: #f2b84cff;
+    background: #F7B236;
     color: #123;
 }
 
@@ -101,13 +101,13 @@ html,body {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     font-size: 20px;
-    background: #41a9adff;
+    background: #00D1FF;
     color: #123;
     cursor: pointer;
 }
 
 #nameSubmit:hover {
-    background: #387995ff;
+    background: #00FFF5;
 }
 
 .infoText {
@@ -131,13 +131,13 @@ html,body {
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     font-size: 20px;
-    background: #41a9adff;
+    background: #00D1FF;
     color: #123;
     cursor: pointer;
 }
 
 .startButton:hover {
-    background: #387995ff;
+    background: #00FFF5;
 }
 
 .wideButton {
@@ -151,14 +151,14 @@ html,body {
     margin-right: 10px;
     background: #292e3dff;
     /* background: #FAF0D7; */
-    border: 10px solid #41a9adff;
+    border: 10px solid #00D1FF;
 }
 
 #opponentCanvas {
     max-width: 600px;
     height: 600px;
     background: #123;
-    border: 10px solid #ef5c44ff;
+    border: 10px solid #FF3E6D;
     transition: all 0.25s;
 }
 
@@ -175,16 +175,16 @@ html,body {
 }
 @keyframes blink {
     0% {
-        color: #ef5c44ff;
+        color: #FF3E6D;
     }
     25% {
-        color: #f2b84cff;
+        color: #F7B236;
     }
     50% {
-        color: #33bf33;
+        color: #4EF037;
     }
     75% {
-        color: #41a9adff;
+        color: #00D1FF;
     }
     100% {
         color: #A91079;
@@ -195,7 +195,7 @@ html,body {
     position: absolute;
     width: 30px;
     height: 30px;
-    border: 10px solid #33bf33;
+    border: 10px solid #4EF037;
     right: 10%;
     bottom: 40%;
     animation: spin 10s linear infinite;
@@ -212,7 +212,7 @@ html,body {
 
 .item2 {
   position: absolute;
-  left: 90px;
+  left: 200px;
   bottom: 20%;
   width: 30px;
   display: flex;
@@ -232,7 +232,7 @@ html,body {
 .item2 div{
   height: 4px;
   width: 4px;
-  background-color: #f2b84cff;
+  background-color: #F7B236;
   margin: 0 3px 8px;
 }
 
@@ -240,7 +240,7 @@ html,body {
     position: absolute;
     height: 40px;
     width: 40px;
-    border: 8px solid #ef5c44ff;
+    border: 8px solid #FF3E6D;
     border-radius: 50%;
     left: 10%;
     top: 90px;
@@ -259,7 +259,7 @@ html,body {
 .item4 {
     position: absolute;
     border-top: 40px solid transparent;
-    border-left:40px solid #41a9adff;
+    border-left:40px solid #00D1FF;
     left: 15%;
     top: 40%;
     animation: spin 15s linear infinite;
@@ -268,7 +268,7 @@ html,body {
 .item4:before {
     content: '';
     border-top: 40px solid transparent;
-    border-left:40px solid #41a9adff;
+    border-left:40px solid #00D1FF;
     position: absolute;
     opacity: 0.7;
     left: -35px;
@@ -281,7 +281,7 @@ html,body {
     width: 50px;
     right: 0%;
     top: 20%;
-    background-color: #41a9adff;
+    background-color: #00D1FF;
 }
 
 .item6 {
@@ -290,7 +290,7 @@ html,body {
     width: 50px;
     right: 0%;
     top: 25%;
-    background-color: #387995ff;
+    background-color: #00FFF5;
 }
 
 .item7 {
@@ -299,7 +299,7 @@ html,body {
     width: 50px;
     right: 0%;
     top: 30%;
-    background-color: #33bf4bff;
+    background-color: #4EF037;
 }
 
 .item8 {
@@ -308,7 +308,7 @@ html,body {
     width: 50px;
     right: 0%;
     top: 35%;
-    background-color: #f2b84cff;
+    background-color: #F7B236;
 }
 
 .item9 {
@@ -317,7 +317,7 @@ html,body {
     width: 50px;
     right: 0%;
     top: 40%;
-    background-color: #ef5c44ff;
+    background-color: #FF3E6D;
 }
 
 .item10 {
@@ -329,7 +329,61 @@ html,body {
     background-color: #A91079;
 }
 
+/*bottom*/
 
+.item11 {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    left: 0%;
+    bottom: 20%;
+    background-color: #00D1FF;
+}
+
+.item12 {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    left: 0%;
+    bottom: 25%;
+    background-color: #00FFF5;
+}
+
+.item13 {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    left: 0%;
+    bottom: 30%;
+    background-color: #4EF037;
+}
+
+.item14 {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    left: 0%;
+    bottom: 35%;
+    background-color: #F7B236;
+}
+
+.item15 {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    left: 0%;
+    bottom: 40%;
+    background-color: #FF3E6D;
+}
+
+.item16 {
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    left: 0%;
+    bottom: 45%;
+    background-color: #A91079;
+}
 
 
 
