--- a/DoAnLTM/src/client/index.css
+++ b/DoAnLTM/src/client/index.css
@@ -8,7 +8,7 @@ html,body {
 
 #container {
     width: 100%;
-    height: 98%;
+    height: 96%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -25,7 +25,7 @@ html,body {
 
 .noshrink {
     flex-shrink: 0;
-    scale: 0.85;
+    scale: 0.8;
 }
 
 #reservedCanvas {
@@ -164,7 +164,7 @@ html,body {
 
 .name {
     text-align: center;
-    font-size: large;
+    font-size: 20px;
     font-family: 'Press Start 2P', cursive;
     color: #ffc31a;
     width: 70%;
